syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package budget_proto;

service BudgetService {
  rpc GetPurchases (GetPurchasesRequest) returns (GetPurchasesResponse);
  rpc GetMostCommonPurchases (GetMostCommonPurchasesRequest) returns (GetMostCommonPurchasesResponse);
  rpc AddPurchase (AddPurchaseRequest) returns (AddPurchaseResponse);
  rpc UpdatePurchase (UpdatePurchaseRequest) returns (UpdatePurchaseResponse);
  rpc DeletePurchase (DeletePurchaseRequest) returns (DeletePurchaseResponse);
  rpc AddCategory (AddCategoryRequest) returns (AddCategoryResponse);
  rpc DeleteCategory (DeleteCategoryRequest) returns (DeleteCategoryResponse);
  rpc UpdateCategory (UpdateCategoryRequest) returns (UpdateCategoryResponse);
  rpc GetCategories (GetCategoriesRequest) returns (GetCategoriesResponse);
  rpc AddPayHistory (AddPayHistoryRequest) returns (AddPayHistoryResponse);
  rpc UpdatePayHistory (UpdatePayHistoryRequest) returns (UpdatePayHistoryResponse);
  rpc DeletePayHistory (DeletePayHistoryRequest) returns (DeletePayHistoryResponse);
  rpc GetPayHistories (GetPayHistoriesRequest) returns (GetPayHistoriesResponse);
  rpc GetPayHistoriesForMonth (GetPayHistoriesForMonthRequest) returns (GetPayHistoriesForMonthResponse);
}

message GetPurchasesRequest {
  optional google.protobuf.StringValue description = 1;
  optional google.protobuf.StringValue category = 2;
  optional google.protobuf.Timestamp start_time = 3;
  optional google.protobuf.Timestamp end_time = 4;
}

message GetPurchasesResponse {
  repeated Purchase purchases = 1;
}

message GetMostCommonPurchasesRequest {
  optional google.protobuf.StringValue category = 1;
  optional google.protobuf.Timestamp start_time = 2;
  optional google.protobuf.Timestamp end_time = 3;
  optional google.protobuf.Int32Value count = 4;
}

message GetMostCommonPurchasesResponse {
  repeated Purchase purchases = 1;
}

message AddPurchaseRequest {
  google.protobuf.Timestamp date = 1;
  string description = 2;
  double amount = 3;
  string category = 4;
}

message AddPurchaseResponse { }

message UpdatePurchaseRequest {
  int32 purchase_id = 1;
  google.protobuf.Timestamp date = 2;
  string description = 3;
  double amount = 4;
  string category = 5;
}

message UpdatePurchaseResponse { }

message DeletePurchaseRequest {
  int32 purchase_id = 1;
}

message DeletePurchaseResponse { }

message Purchase {
  int32 purchase_id = 1;
  google.protobuf.Timestamp date = 2;
  string description = 3;
  double amount = 4;
  string category = 5;
}

message AddCategoryRequest {
  string category = 1;
}

message AddCategoryResponse { }

message DeleteCategoryRequest {
  string category = 1;
}

message DeleteCategoryResponse { }

message UpdateCategoryRequest {
  string category = 1;
  string update_to = 2;
}

message UpdateCategoryResponse { }

message GetCategoriesRequest { }

message GetCategoriesResponse {
  repeated string categories = 1;
}

message AddPayHistoryRequest {
  google.protobuf.Timestamp pay_period_start_date = 1;
  google.protobuf.Timestamp pay_period_end_date = 2;
  double earnings = 3;
  double pre_tax_deductions = 4;
  double taxes = 5;
  double post_tax_deductions = 6;
}

message AddPayHistoryResponse { }

message UpdatePayHistoryRequest {
  int32 pay_history_id = 1;
  google.protobuf.Timestamp pay_period_start_date = 2;
  google.protobuf.Timestamp pay_period_end_date = 3;
  double earnings = 4;
  double pre_tax_deductions = 5;
  double taxes = 6;
  double post_tax_deductions = 7;
}

message UpdatePayHistoryResponse { }

message DeletePayHistoryRequest {
  int32 pay_history_id = 1;
}

message DeletePayHistoryResponse { }

message GetPayHistoriesRequest {
  optional google.protobuf.Timestamp start_time = 1;
  optional google.protobuf.Timestamp end_time = 2;
}

message GetPayHistoriesResponse {
  repeated PayHistory pay_histories = 1;
}

message GetPayHistoriesForMonthRequest {
  google.protobuf.Timestamp month = 1;
}

message GetPayHistoriesForMonthResponse {
  repeated PayHistory pay_histories = 1;
}

message PayHistory {
  int32 pay_history_id = 1;
  google.protobuf.Timestamp pay_period_start_date = 2;
  google.protobuf.Timestamp pay_period_end_date = 3;
  double earnings = 4;
  double pre_tax_deductions = 5;
  double taxes = 6;
  double post_tax_deductions = 7;
}